# sentinel-of-mnemosyne

./: .env.example  .gitignore  .gsd  .gsd-id  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GSD-WORKTREE-DELETION-BUG-REPORT.md  README.md  ROADMAP.md  SECURITY.md  V040-REFACTORING-DIRECTIVE.md  docker-compose.yml  package-lock.json  sentinel.sh  skills-lock.json
interfaces/discord/: .env.example  Dockerfile  bot.py  command_router.py  compose.yml  core_call_bridge.py  core_gateway.py  dialog_router.py  discord_internal_notify.py  discord_router_bridge.py  embed_builders.py  pathfinder_bridge.py  pathfinder_cli.py  pathfinder_command_catalog.py  pathfinder_dispatch.py  pathfinder_error_mapper.py  pathfinder_foundry_adapter.py  pathfinder_harvest_adapter.py  pathfinder_ingest_adapter.py  pathfinder_npc_basic_adapter.py  pathfinder_npc_rich_adapter.py  pathfinder_player_adapter.py  pathfinder_player_contract.py  pathfinder_player_dialog.py  pathfinder_player_dialog_outcome.py  pathfinder_player_draft_store.py  pathfinder_registry.py  pathfinder_rule_adapter.py  pathfinder_rule_contract.py  pathfinder_session_adapter.py  pathfinder_types.py  pyproject.toml  response_renderer.py
interfaces/discord/tests/: conftest.py  test_command_router_module.py  test_core_call_bridge.py  test_core_gateway.py  test_dialog_router.py  test_discord_admin_gate.py  test_discord_foundry.py  test_discord_internal_notify.py  test_discord_router_bridge.py  test_embed_builders.py  test_integration.py  test_live_integration.py  test_pathfinder_bridge.py  test_pathfinder_cli.py  test_pathfinder_dispatch.py  test_pathfinder_error_mapper.py  test_pathfinder_foundry_adapter.py  test_pathfinder_harvest_adapter.py  test_pathfinder_ingest_adapter.py  test_pathfinder_npc_basic_adapter.py  test_pathfinder_npc_rich_adapter.py  test_pathfinder_player_adapter.py  test_pathfinder_player_dialog.py  test_pathfinder_player_dispatch.py  test_pathfinder_player_draft_store.py  test_pathfinder_registry.py  test_pathfinder_rule_adapter.py  test_pathfinder_session_adapter.py  test_phase38_integration.py  test_response_renderer.py  test_subcommands.py  test_thread_persistence.py
modules/pathfinder/: Dockerfile  README.md  compose.yml  pyproject.toml
modules/pathfinder/app/: cartosia_import.py  cartosia_router.py  config.py  dialogue.py  foundry.py  foundry_chat_import.py  foundry_import_state_ledger.py  foundry_memory_projection.py  foundry_projection_planner.py  harvest.py  legendkeeper_image.py  llm.py  llm_call.py  main.py  memory_projection_store.py  model_profiles.py  model_selector.py  npc_matcher.py  obsidian.py  pdf.py  pf_archive_import.py  (+14 more)
sentinel-core/: Dockerfile  compose.yml  models-seed.json  pyproject.toml
sentinel-core/app/: composition.py  config.py  errors.py  main.py  markdown_frontmatter.py  models.py  runtime_config.py  state.py  time_utils.py  vault.py
sentinel-core/scripts/: trash_vault_root_junk.py
sentinel-core/tests/: conftest.py  test_ai_agnostic_guardrail.py  test_auth.py  test_bot_subcommands.py  test_bot_thread_persistence.py  test_composition.py  test_config.py  test_context_budget_policy.py  test_cors.py  test_embedding_sidecar_index.py  test_embeddings.py  test_health.py  test_inbox.py  test_injection_filter.py  test_integration_live.py  test_integration_obsidian_llm.py  test_litellm_provider.py  test_llm_call_shared.py  test_lmstudio_client.py  test_markdown_frontmatter.py  test_message.py  test_message_error_mapper.py  test_message_processing_module.py  test_message_processor.py  test_message_processor_factory.py  test_message_request_factory.py  test_message_route_bridge.py  test_model_profiles.py  test_model_registry.py  test_model_selector.py  test_model_selector_discovery.py  test_modules.py  test_note_classifier.py  test_note_routes.py  test_note_sweep_runner.py  test_numpy_importable.py  test_obsidian_client.py  test_obsidian_vault.py  test_output_scanner.py  test_pi_adapter.py  (+14 more)
shared/: pyproject.toml  sentinel_client.py
shared/sentinel_shared/: __init__.py  embedding_codec.py  llm_call.py  model_profiles.py  similarity.py
shared/tests/: conftest.py  test_embedding_codec.py  test_sentinel_client.py  test_similarity.py
(+641 files in other folders)
