[project]
name = "pf2e-module"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
